Changes with Apache 1.3.20

  *) Set the Win32 service description in the Services control panel to 
     the server_version string from Apache and the loaded modules.
     [William Rowe]

  *) Added a new API for NetWare, ap_os_dso_unsym(), to allow Apache the 
     chance to unimport module symbols before it shuts down.  This is 
     necessary so that Apache on NetWare can shutdown cleanly in an error
     condition such as a failure while reading the httpd.conf file.
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Introduce NUL device pipes for stdin and stdout for the parent Win32
     service process.  This solves bugs such as PR7198 that report 
     "dup2(stdin) failed" when trying to use piped logs.  [William Rowe]

Changes with Apache 1.3.19

  *) Rewrite ap_unparse_uri_components() to make it safer and more readable
     ["Jeffrey W. Baker" <jwbaker@acm.org>]

  *) Under certain circumstances, Apache did not supply the
     right response headers when requiring authentication.
     [Gertjan van Wingerde <Gertjan.van.Wingerde@cmg.nl>] PR#7114

  *) Clean up some end-of-loop not reached warnings [Jim Jagielski,
     Aris Stathakis <aris@sco.COM>]

  *) Add the correct language tag for interoperation with the Taiwanese
     versions of MSIE and Netscape. [Clive Lin <clive@CirX.ORG>] PR#7142

  *) Fixed system shutdown on Windows 2000 to assure that the modules have
     an opportunity to clean up.  Note there is a _very_ limited amount of
     time in which to execute all cleanups [see MSKB Q146092] so all of
     the modules may still not be given an opportunity to complete their
     cleanups if they require more than 20 seconds total.  [William Rowe]

Changes with Apache 1.3.18 [not released]

  *) Workaround enabled for a core dump which appeared in broken
     NameVirtualHost configurations. [Martin Kraemer]

  *) Sporadic core dump in ap_default_port_for_scheme() with
     internal requests fixed by [Jeffrey W. Baker <jwbaker@acm.org>]
